# curio_one

./: 1.txt  CMakeLists.txt  README.md  curio_one.xml  package.xml
config/: bno055_params_i2c.yaml  collision_monitor_params.yaml  ekf.yaml  imu_filter.yaml  joystick.yaml  laser_filter.yaml  mapper_params_online_async.yaml  my_controller.yaml  my_controllers.yaml  nav2_params.yaml  robot.rviz  twist_mux.yaml
description/: gazebo_control.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  tof.xacro  ultrasonic.xacro
include/: curio_system.cpp
include/curio_one/: arduino_comms.hpp  battery.hpp  curio_system.hpp  sensor.hpp  visibility_control.h  wheel.hpp
launch/: 1_range.py  cameradetection.launch.py  collision.launch.py  icm20948_node_launch.py  joystick.launch.py  laser_filter.launch.py  launch_sim.launch.py  navigation.launch.py  navigation_launch.py  online_async_launch.py  real_robot.launch.py  rplidar.launch.py  rsp.launch.py  sllidar_a1_launch.py
maps/: half_office.data  half_office.pgm  half_office.yaml
scripts/: 1_range.py  2_range.py  4_range.py  5_range.py  6_range.py  7_range.py  8_range.py  anasbhai.py  auto_dock.py  battery_stat.py  camera.py  exibits.py  face.py  facedetect.py  facedetect2.py  hello_curio88.onnx  hey_curio82.onnx  home_nav.py  icm20948_node.py  imu_node.py  introduction.py  location.py  location.txt  multi_nav_pt.py  nav2_test_way.py  nav_follow_path.py  nav_recovery.py  nav_security.py  nav_test.py  nav_test_multi.py  navigation_commender.py  range.py  single_nav_pt.py  speechtest.py  test_auto_dock.py  wakeandchatfinal.py  wakeonfacedetect.py  wakewordintefinal.py  yolo.py
worlds/: test.world
